css/style.css
/* ... */
.call-to-action-landing-page-right a{
    
    border: 1px solid #f9faf8;
    color: #f9faf8;
    background-color:#3882F6;
    padding: 10px 20px 10px 20px;
    border-radius: 5px;
}

.call-to-action-landing-page-right a:hover {
    background-color:#f9faf8;
    color: #3882F6;
    border: 1px solid #3882F6;
}

/*===========================================*/
/* -------------ABOUT US PAGE--------------  */
/*===========================================*/

.main-about-page {
    display: flex;
    flex-direction: column;
    max-width: 1200px;
    align-items: center;
    justify-content: center;
    gap: 40px;
    margin: 0 auto;
    padding-top: 40px;
    padding-bottom: 40px;
}

/*----------about us TOP---------------*/
.main-about-page-top {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
    gap: 60px;
    width: 100%;
    max-width: 1200px;    
    padding: 0 40px;
    margin: 0 auto;
    border-bottom: 0.3px solid #c4ccff;
    padding-bottom: 40px;
    
    background-color: #F5F4F0;
    flex: 0 0 calc((100% - 30px) / 4);  
    border-radius: 8px;
    box-shadow: 1 10px 20px rgba(0, 0, 0, 0.1);  
}

.main-about-page-top-left {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    
    line-height: 1.5;
}

.main-about-page-top-left h2 {
    text-decoration: underline;
    font-size: 48px;
    font-weight: bold;
    padding-bottom: 30px;
    
}

.main-about-page-top-right {
    display: flex;
    align-items: center;
    justify-content: center;
    padding-top: 40px;
}

.main-about-page-top-right img {
    width: 80%;
    height: auto;
    border: 1px solid white;
    border-radius: 12px;
}

/*----------about us BOTTOM---------------*/
.main-about-page-bottom {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
    gap: 60px;
    width: 100%;
    max-width: 1200px;    
    padding: 0 40px;
    margin: 0 auto;
    border-bottom: 0.3px solid #c4ccff;
    padding-bottom: 40px;
    
    background-color: #F5F4F0;
    flex: 0 0 calc((100% - 30px) / 4);  
    border-radius: 8px;
    box-shadow: 1 10px 20px rgba(0, 0, 0, 0.1);  
}

.main-about-page-bottom-left {
    display: flex;
    align-items: center;
    justify-content: center;
    padding-top: 40px;
    
}

.main-about-page-bottom-right h2 {
    text-decoration: underline;
    font-size: 48px;
    font-weight: bold;
    padding-bottom: 30px;
}

.main-about-page-bottom-right {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    line-height: 1.5;
}

.main-about-page-bottom-left img {
    width: 80%;
    height: auto;
    border: 1px solid white;
    border-radius: 12px;
}

/*===========================================*/
/* -------------CONTACT US PAGE--------------  */
/*===========================================*/

.contact-main { /* MAIN CONTAINER FOR WHOLE PAGE */
    display: flex;
    flex-direction: row;
    gap: 20px;
    padding: 0;
    width: 100%;
    max-width: 1200px;
    margin: 40px auto;
    align-items: stretch;
    overflow: hidden; 
}

/* LEFT SIDE - WORDING */
.contact-main section {
    flex: 1;
    display: flex;
    flex-direction: column;
    justify-content: center;
    padding: 40px;
}

/* RIGHT SIDE - FORM */
.contact-main aside {
    flex: 1;
    padding: 40px;
}

.contact-main aside form{
    justify-content: center;
}

.contact-main h2 {
    text-align: center;
    text-decoration: underline;
}

.contact-main p {
    font-size: 16px;
    text-align: center;
    color: #000000;
    line-height: 1.5;
}

/* BLUE FORM CONTAINER */
.input-container {
    background-color: #1f2937;
    color: #ffffff;
    padding: 20px;
    border-radius: 8px;
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
    display: flex;
    flex-direction: column;
    min-height: 450px;
    width: 100%;
}

.input-container p {
    font-size: 16px;
    text-align: center;
    color: #ffffff;
}

.input-container button {
    width:fit-content;
    padding: 12px 24px;
    border: none;
    border-radius: 8px;
    background: #3882f6;
    color: #f9faf8;
    font-weight: bold;
    cursor: pointer;
    transition: 0.3s;
    margin-top: 20px;
}

.input-container button:hover {
    background: #2a74eb;
}

/* CONTACT US - STYLING FOR MESSAGE FORM USER INPUT BLOCK ('row', 'input-group', 'input, textarea')*/
.row {
  display: flex;
  gap: 20px; 
}
.input-group {
  flex: 1; 
}
input, textarea {
  width: 100%;
  padding: 8px;
}

aside {
    flex: 2;
    align-self: center;
}
section {
    flex: 2;
}

h1{
    text-align: center;
    text-decoration: underline;
}
h3{
    text-align: center;
    padding: 5px;
    text-decoration: underline;
}

.destination-box {/* GRID FOR ALL DESTINATION CARDS */
    display: flex;
    flex-wrap: wrap;
    gap: 10px;      
    padding: 0 20px;
    justify-content: center;
    max-width: 1200px;
    margin: 0 auto;
}
.destination-card {/* GREY CARD BOX AROUND EACH IMAGE AND TEXT */
    background-color: #F5F4F0;
    flex: 0 0 calc((100% - 30px) / 4); /* 4 CARDS PER ROW WITH GAP */
    padding: 10px;
    border-radius: 8px;
    box-shadow: 1 10px 20px rgba(0, 0, 0, 0.1); /* SHADOW FOR 3D CARD EFFECT */
    text-align: center; /* CENTER TEXT WITHIN THE CARD BUT ONLY FOR THE CITY AND COUNTRY*/
    border-bottom: 0.3px solid #c4ccff;
}

.destination-card img:hover {
    transform: translateY(-5px); /* LIFT EFFECT ON HOVER */
    box-shadow: 1 15px 25px rgba(0, 0, 0, 0.2); /* ENHANCED SHADOW ON HOVER */
    cursor: pointer;
}

.destination-card img {/* IMAGE FORMATTING */
    width: 250px;
    height: 300px;
    border-radius: 8px; /* ROUND BOARDERS */
}
.destination-card p {/* FORMATTING TEXT TO LOOK DIFFERENT TO CITY AND COUNTRY */
    font-size: 16px;
    color: #333;
    text-align: justify;
}

.line { /* SUB-CONTAINER FOR PRICE AND DAYS */
    display: flex;
    justify-content: space-between;
}
/* ... */

